# hugh-scene

./: .travis.yml  CMakeLists.txt  README.rst
cmake/: HUGH_SCENE_SetupOptions.cmake  HUGH_SCENE_SetupPaths.cmake  HUGH_SCENE_SetupVariables.cmake  SetupPackaging.cmake
inc/hugh/: scene.hpp
inc/hugh/scene/: file.hpp  nodes.hpp  objects.hpp  primitives.hpp  visitors.hpp
inc/hugh/scene/node/: base.hpp  base.inl  camera.hpp  dynamic.hpp  geometry.hpp  geometry.inl  global_light.hpp  group.hpp  local_light.hpp  material_group.hpp  mesh.hpp  rotor.hpp  select.hpp  transform.hpp  translator.hpp
inc/hugh/scene/object/: base.hpp  base.inl  cameras.hpp  geometries.hpp  lights.hpp  material.hpp  materials.hpp  textures.hpp
inc/hugh/scene/object/camera/: base.hpp  frustum.hpp  orthographic.hpp  perspective.hpp  viewport.hpp
inc/hugh/scene/object/geometry/: attribute.hpp  attribute.inl  base.hpp  cube.hpp  cylinder.hpp  icosahedron.hpp  mesh.hpp  octahedron.hpp  sphere.hpp  tetrahedron.hpp
inc/hugh/scene/object/light/: area.hpp  base.hpp  directional.hpp  positional.hpp  spot.hpp
inc/hugh/scene/object/material/: base.hpp  simple.hpp  textured.hpp
inc/hugh/scene/object/texture/: base.hpp  d1.hpp  d2.hpp  d3.hpp
inc/hugh/scene/primitive/: cube.hpp  cylinder.hpp  icosahedron.hpp  octahedron.hpp  sphere.hpp  tetrahedron.hpp
inc/hugh/scene/visitor/: base.hpp  base.inl  bfs.hpp  cull.hpp  dfs.hpp  print.hpp  subject.hpp  update_bounds.hpp
share/: CMakeLists.txt
share/doc/: CMakeLists.txt
share/doc/hugh/: CMakeLists.txt
share/doc/hugh/scene/: CMakeLists.txt  hugh_scene.dev.doxygen.cfg.in  hugh_scene.usr.doxygen.cfg.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/traversal/: CMakeLists.txt  main.cpp
src/lib/scene/: CMakeLists.txt  file.cpp  version.hpp.in
src/lib/scene/loader/: mtl.cpp  mtl.hpp  obj.cpp  obj.hpp  xform.cpp  xform.hpp
src/lib/scene/node/: base.cpp  camera.cpp  dynamic.cpp  geometry.cpp  global_light.cpp  group.cpp  local_light.cpp  material_group.cpp  mesh.cpp  rotor.cpp  select.cpp  transform.cpp  translator.cpp
src/lib/scene/object/: base.cpp  material.cpp
src/lib/scene/object/camera/: base.cpp  frustum.cpp  orthographic.cpp  perspective.cpp  viewport.cpp
src/lib/scene/object/geometry/: attribute.cpp  base.cpp  cube.cpp  cylinder.cpp  icosahedron.cpp  mesh.cpp  octahedron.cpp  sphere.cpp  tetrahedron.cpp
src/lib/scene/object/light/: area.cpp  base.cpp  directional.cpp  positional.cpp  spot.cpp
src/lib/scene/object/material/: base.cpp  simple.cpp  textured.cpp
src/lib/scene/object/texture/: base.cpp  d1.cpp  d2.cpp  d3.cpp  fill.cpp  fill.hpp  fill.inl  load.cpp  load.hpp
src/lib/scene/primitive/: cube.cpp  cylinder.cpp  icosahedron.cpp  octahedron.cpp  sphere.cpp  tetrahedron.cpp
src/lib/scene/test/: CMakeLists.txt  file.cpp  loader_mtl.cpp  loader_obj.cpp  loader_xform.cpp  node_camera.cpp  node_geometry.cpp  node_global_light.cpp  node_group.cpp  node_local_light.cpp  node_material_group.cpp  node_mesh.cpp  node_rotor.cpp  node_select.cpp  node_transform.cpp  node_translator.cpp  object_camera.cpp  object_camera_frustum.cpp  object_camera_orthographic.cpp  object_camera_perspective.cpp  object_camera_viewport.cpp  object_geometry_cube.cpp  object_geometry_cylinder.cpp  object_geometry_icosahedron.cpp  object_geometry_mesh.cpp  object_geometry_octahedron.cpp  object_geometry_sphere.cpp  object_geometry_tetrahedron.cpp  object_light.cpp  object_light_area.cpp  object_light_directional.cpp  object_light_positional.cpp  object_light_rep.cpp  object_light_spot.cpp  object_material.cpp  object_material_simple.cpp  object_material_textured.cpp  object_texture.cpp  object_textures.cpp  primitive_cube.cpp  (+10 more)
src/lib/scene/visitor/: base.cpp  bfs.cpp  cull.cpp  dfs.cpp  print.cpp  subject.cpp  update_bounds.cpp
